tests/expected/arbitrary/ptrs/pointer_generator_error.expected
error[E0080]: evaluation of `kani::PointerGenerator::<0>::VALID` failed\

evaluation panicked: PointerGenerator requires at least one byte.\

note: the above error was encountered while instantiating `fn kani::PointerGenerator::<0>::new`\
pointer_generator_error.rs\
|\
|     let _generator = PointerGenerator::<0>::new();\
|                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
